--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <div id="modal" class="book-modal hidden">
       <div id="book-modal-container" class="book-modal-container"></div>
     </div>
+
+    <div id="loaderContainer" class="loader-container fade-out">
+      <div class="loader-spinner"></div>
+    </div>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
